[gd_scene load_steps=2 format=3 uid="uid://dnse4x3wws41k"]

[ext_resource type="Script" path="res://Menu/Death/DeathMenu.gd" id="1_dphab"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dphab")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 1.7778

[node name="ButtonsContainer" type="VBoxContainer" parent="CanvasLayer/AspectRatioContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 100

[node name="RetryBtn" type="Button" parent="CanvasLayer/AspectRatioContainer/ButtonsContainer"]
layout_mode = 2
text = "Retry"

[node name="QuitBtn" type="Button" parent="CanvasLayer/AspectRatioContainer/ButtonsContainer"]
layout_mode = 2
text = "Rage Quit"

[connection signal="pressed" from="CanvasLayer/AspectRatioContainer/ButtonsContainer/RetryBtn" to="." method="_on_retry_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/AspectRatioContainer/ButtonsContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
